bug - dropdown not overflow

--- a/src/BCore/wwwroot/app/css/site.css
+++ b/src/BCore/wwwroot/app/css/site.css
@@ -77,3 +77,7 @@ div.center-cropped img {
 .media-content {
     margin-top: 50px;
 }
+
+.dropdown-menu{
+    position:fixed;
+}
